updated content on home page and fixed layout issue in footer on mobile size

--- a/src/main.css
+++ b/src/main.css
@@ -143,7 +143,6 @@ h2 {
 }
 
 .footer-brand {
-    text-align: center;
     margin-bottom: 3rem;
 }
 
